--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -40,15 +40,14 @@
               </div>
 
               <div class="form-group">
-                <label for="dateOfBirth">Birthday</label> <input type="date" class="form-control" id="dateOfBirth"
+                <label for="dateOfBirth">Date of birth</label> <input type="date" class="form-control" id="dateOfBirth"
                   name="dateOfBirth" placeholder="1995-06-21" required th:field="*{dateOfBirth}">
               </div>
 
               <div class="form-group">
-                <label for="email">Email address</label> <input type="email" class="form-control" id="email"
+                <label for="email">Public email</label> <input type="email" class="form-control" id="email"
                   aria-describedby="emailHelp" name="email" placeholder="stephanie.bauer@telekom.de" required
-                  th:field="*{email}"> <small class="form-text text-muted">We'll never share your email
-                  with anyone else.</small>
+                  th:field="*{email}">
               </div>
 
               <div class="form-group">
