--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -8,128 +8,203 @@
 
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
-  <section>
+  <main>
 
+    <div class="container">
 
-    <div class="flex-container">
-      <div class="container cards">
-        <div class="row no-gutters">
+      <div class="row">
+        <div class="col col-12 col-lg-8 offset-lg-2">
+          <div>
+            <form th:object="${user}">
 
-          <div class="card" style="width: 50rem;">
-            <div class="card-header"><i class="fas fa-user"></i> User Profile</div>
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
+              <h2 class="headline">Your profile</h2>
 
-                <div class="card mb-3">
-                  <div class="row no-gutters">
-                    <div class="col-md-4">
-
-
-                      <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150"
-                        width="150">
-                      <img class="img-view" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}"
-                        height="150" width="150">
-
-                    </div>
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <p class="card-text">
-                        <div class="flex-container">
-
-                          <div class="row no-gutters">
-                            <div class="col-4">
-                              <p class="bold">Firstname:</p>
-                            </div>
-                            <div class="col-1">
-                              <p></p>
-                            </div>
-                            <div class="col-6">
-                              <p th:text="|${user.firstName}|"></p>
-                            </div>
-                          </div>
-
-                          <div class="row no-gutters">
-                            <div class="col-4">
-                              <p class="bold">Lastname:</p>
-                            </div>
-                            <div class="col-1">
-                              <p></p>
-                            </div>
-                            <div class="col-6">
-                              <p th:text="|${user.lastName}|"></p>
-                            </div>
-                          </div>
-
-                          <div class="row no-gutters">
-                            <div class="col-4">
-                              <p class="bold">Age:</p>
-                            </div>
-                            <div class="col-1">
-                              <p></p>
-                            </div>
-                            <div class="col-6">
-                              <p th:text="|${user.age}|"></p>
-                            </div>
-                          </div>
-
-                          <div class="row no-gutters">
-                            <div class="col-4">
-                              <p class="bold">City:</p>
-                            </div>
-                            <div class="col-1">
-                              <p></p>
-                            </div>
-                            <div class="col-6">
-                              <p th:text="|${user.city}|"></p>
-                            </div>
-                          </div>
-
-                          <div class="row no-gutters">
-                            <div class="col-4">
-                              <p class="bold">E-Mail:</p>
-                            </div>
-                            <div class="col-1">
-                              <p></p>
-                            </div>
-                            <div class="col-6">
-                              <p th:text="|${user.email}|"></p>
-                            </div>
-                          </div>
-
-
-                          <div class="row no-gutters">
-                            <div class="col-4">
-                              <p class="bold">Description</p>
-                            </div>
-                            <div class="col-1">
-                              <p></p>
-                            </div>
-                            <div class="col-6">
-                              <p th:text="|${user.description}|"></p>
-                            </div>
-                          </div>
-
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">First name</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{firstName}"></div>
                 </div>
-              </blockquote>
+              </div>
 
-              <a th:href="@{/user/edit(id=${user.id})}" class="btn btn-primary">
-                <i class="fas fa-edit"></i>
-                Edit
-              </a>
-            </div>
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Last name</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{lastName}"></div>
+                </div>
+              </div>
 
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Zip code</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{zipCode}"></div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">City</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{city}"></div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Date of birth</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{#temporals.format(dateOfBirth, 'dd.MM.yyyy')}"></div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Email</label>
+                <div class="col-sm-9">
+                  <a class="form-control-plaintext" th:href="'mailto:' + *{email}" target="_blank" th:text="*{email}"></a>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-form-label">Description</label>
+                <textarea readonly class="form-control-plaintext" id="user-description" name="description"
+                  th:field="*{description}" rows="3"></textarea>
+              </div>
+
+              <h2 class="form-submit"></h2>
+
+              <a th:href="@{/user/edit(id=${user.id})}" class="btn btn-primary"><i class="fas fa-edit fa-fw"></i>
+                Edit profile </a>
+
+            </form>
           </div>
         </div>
-
       </div>
+
     </div>
 
-  </section>
+  </main>
+
+
+
+  <!--   <section> -->
+
+
+  <!--     <div class="flex-container"> -->
+  <!--       <div class="container cards"> -->
+  <!--         <div class="row no-gutters"> -->
+
+  <!--           <div class="card" style="width: 50rem;"> -->
+  <!--             <div class="card-header"><i class="fas fa-user"></i> User Profile</div> -->
+  <!--             <div class="card-body"> -->
+  <!--               <blockquote class="blockquote mb-0"> -->
+
+  <!--                 <div class="card mb-3"> -->
+  <!--                   <div class="row no-gutters"> -->
+  <!--                     <div class="col-md-4"> -->
+
+
+  <!--                       <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150" -->
+  <!--                         width="150"> -->
+  <!--                       <img class="img-view" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}" -->
+  <!--                         height="150" width="150"> -->
+
+  <!--                     </div> -->
+  <!--                     <div class="col-md-8"> -->
+  <!--                       <div class="card-body"> -->
+  <!--                         <p class="card-text"> -->
+  <!--                         <div class="flex-container"> -->
+
+  <!--                           <div class="row no-gutters"> -->
+  <!--                             <div class="col-4"> -->
+  <!--                               <p class="bold">Firstname:</p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-1"> -->
+  <!--                               <p></p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-6"> -->
+  <!--                               <p th:text="|${user.firstName}|"></p> -->
+  <!--                             </div> -->
+  <!--                           </div> -->
+
+  <!--                           <div class="row no-gutters"> -->
+  <!--                             <div class="col-4"> -->
+  <!--                               <p class="bold">Lastname:</p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-1"> -->
+  <!--                               <p></p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-6"> -->
+  <!--                               <p th:text="|${user.lastName}|"></p> -->
+  <!--                             </div> -->
+  <!--                           </div> -->
+
+  <!--                           <div class="row no-gutters"> -->
+  <!--                             <div class="col-4"> -->
+  <!--                               <p class="bold">Age:</p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-1"> -->
+  <!--                               <p></p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-6"> -->
+  <!--                               <p th:text="|${user.age}|"></p> -->
+  <!--                             </div> -->
+  <!--                           </div> -->
+
+  <!--                           <div class="row no-gutters"> -->
+  <!--                             <div class="col-4"> -->
+  <!--                               <p class="bold">City:</p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-1"> -->
+  <!--                               <p></p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-6"> -->
+  <!--                               <p th:text="|${user.city}|"></p> -->
+  <!--                             </div> -->
+  <!--                           </div> -->
+
+  <!--                           <div class="row no-gutters"> -->
+  <!--                             <div class="col-4"> -->
+  <!--                               <p class="bold">E-Mail:</p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-1"> -->
+  <!--                               <p></p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-6"> -->
+  <!--                               <p th:text="|${user.email}|"></p> -->
+  <!--                             </div> -->
+  <!--                           </div> -->
+
+
+  <!--                           <div class="row no-gutters"> -->
+  <!--                             <div class="col-4"> -->
+  <!--                               <p class="bold">Description</p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-1"> -->
+  <!--                               <p></p> -->
+  <!--                             </div> -->
+  <!--                             <div class="col-6"> -->
+  <!--                               <p th:text="|${user.description}|"></p> -->
+  <!--                             </div> -->
+  <!--                           </div> -->
+
+  <!--                         </div> -->
+  <!--                       </div> -->
+  <!--                     </div> -->
+  <!--                   </div> -->
+
+  <!--                 </div> -->
+  <!--               </blockquote> -->
+
+  <!--               <a th:href="@{/user/edit(id=${user.id})}" class="btn btn-primary"> -->
+  <!--                 <i class="fas fa-edit"></i> -->
+  <!--                 Edit -->
+  <!--               </a> -->
+  <!--             </div> -->
+
+  <!--           </div> -->
+  <!--         </div> -->
+
+  <!--       </div> -->
+  <!--     </div> -->
+
+  <!--   </section> -->
 
 
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
