--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -22,7 +22,7 @@
         <div class="w-100 d-block d-lg-none"></div>
         
         <div class="col col-12 col-lg-8">
-          <div>
+          <div class="container-fluid">
             <form th:object="${user}">
 
               <h2 class="headline">Your profile</h2>
@@ -56,9 +56,9 @@
               </div>
 
               <div class="form-group row">
-                <label class="col-sm-3 col-form-label">Date of birth</label>
-                <div class="col-sm-9">
-                  <div class="form-control-plaintext" th:text="*{#temporals.format(dateOfBirth, 'dd.MM.yyyy')}"></div>
+                <label class="col-sm-3 col-form-label">Age</label>
+                <div class="col-sm-4">
+                  <div class="form-control-plaintext" th:text="*{age}"></div>
                 </div>
               </div>
 
@@ -69,9 +69,11 @@
                 </div>
               </div>
 
-              <div class="form-group">
-                <label class="col-form-label">Description</label>
-                <div class="form-control-plaintext" th:text="*{description}"></div>
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Description</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{description}"></div>
+                </div>
               </div>
 
               <h2 class="form-submit"></h2>
