--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -9,7 +9,7 @@
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
   <main>
-  
+
     <!--     Jumbotron -->
     <!--     <div class="jumbotron"> -->
     <!--       <img class="img" th:src="@{${'../images/' + skill.imageURL}}" alt="alt"> -->
@@ -19,83 +19,56 @@
     <!--       </div> -->
     <!--     </div> -->
 
-    <div class="flex-container">
-      <div class="container cards">
-        <div class="row no-gutters">
-          <div class="col">
+    <div class="container">
 
-            <div th:each="user : ${users}" class="card w-75">
-              <div class="card-header">
-                <i class="fas fa-user"></i> User Profile
+      <div class="row" th:each="user : ${users}">
+
+        <div class="col col-6 col-lg-2">
+          <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150" width="150"> <img
+            class="img-view" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}" height="150" width="150">
+        </div>
+
+        <div class="w-100 d-block d-lg-none"></div>
+
+        <div class="col col-12 col-lg-8">
+          <div class="container-fluid">
+            <form th:object="${user}">
+
+              <h2 class="headline" th:text="*{firstName}">First name</h2>
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">City</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{city}"></div>
+                </div>
               </div>
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
 
-                  <div class="card mb-3">
-                    <div class="row no-gutters">
-                      <div class="col-md-4">
-
-                        <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150"
-                          width="150"> <img class="img-view" th:if="${user.image}"
-                          th:src="@{'/user/' + ${user.id} + '/image'}" height="150" width="150">
-
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <p class="card-text">
-                          <div class="flex-container">
-
-                            <div class="row no-gutters">
-                              <div class="col-4">
-                                <p class="bold">Firstname:</p>
-                              </div>
-                              <div class="col-1">
-                                <p></p>
-                              </div>
-                              <div class="col-6">
-                                <p th:text="|${user.firstName}|"></p>
-                              </div>
-                            </div>
-
-                            <div class="row no-gutters">
-                              <div class="col-4">
-                                <p class="bold">Age:</p>
-                              </div>
-                              <div class="col-1">
-                                <p></p>
-                              </div>
-                              <div class="col-6">
-                                <p th:text="|${user.age}|"></p>
-                              </div>
-                            </div>
-
-                            <div class="row no-gutters">
-                              <div class="col-4">
-                                <p class="bold">City:</p>
-                              </div>
-                              <div class="col-1">
-                                <p></p>
-                              </div>
-                              <div class="col-6">
-                                <p th:text="|${user.city}|"></p>
-                              </div>
-                            </div>
-
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                </blockquote>
-
-                <a th:href="@{${'/user/view?id=' + user.id}}" class="btn btn-primary"><i class="far fa-address-card"></i>
-                  See profile</a>
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Age</label>
+                <div class="col-sm-4">
+                  <div class="form-control-plaintext" th:text="*{age}"></div>
+                </div>
               </div>
-            </div>
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Description</label>
+                <div class="col-sm-9">
+                  <div class="form-control-plaintext" th:text="*{description}"></div>
+                </div>
+              </div>
+
+              <h2 class="form-submit"></h2>
+
+              <a th:href="@{${'/user/view?id=' + user.id}}" class="btn btn-primary"><i
+                class="far fa-address-card fa-fw"></i> View profile</a>
+
+            </form>
           </div>
         </div>
+
+
       </div>
+
     </div>
 
   </main>
