--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,15 @@
 
   <main>
 
+    <div class="jumbotron jumbotron-fluid"
+      th:style="'background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)
+        ),url('+@{${'../images/skillhub.jpg'}}+'); background-size: cover;'">
+      <div class="container">
+        <h1 class="display-4" style="color: white">SkillHub</h1>
+        <p class="lead" style="color: white">Find people who teach you their skill and get in contact!</p>
+      </div>
+    </div>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
@@ -26,7 +35,7 @@
         </div>
         <div class="col-lg-5">
           <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 49%;">
-            <iframe src="//cdn.iframe.ly/pM9DVZe?media=1"
+            <iframe src="https://cdn.iframe.ly/pM9DVZe?media=1"
               style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;"></iframe>
           </div>
         </div>
